--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1776,107 +1776,107 @@ stories:
   domain: http://www.journalstar.com/
   link: https://journalstar.com/news/national/suspect-in-custody-after-man-shot-at-oklahoma-city-mall/image_b6e62f4a-51bc-53cf-abf3-528613cc24ef.html
 images:
-- name: old-door-lock-old-door-lock-2-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-rain.jpg
-- name: ellis-island-ellisisland-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-clean-view.jpg
-- name: abandonedbuildings_clean_view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_clean_view.jpg
-- name: downtown-los-angeles-downtown-la-ww2-color.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-ww2-color.JPG
-- name: status-berlin-status-berlin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-asteroids.jpg
-- name: castle-wall-DSC-0067-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-clean-view.JPG
-- name: dragon-desert-desert-dragon-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-alien-goggles.jpg
-- name: rockingchair-rockingchair-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
-- name: dragon-desert-desert-dragon-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-granite.jpg
-- name: cargo-ship-cargo-ship-on-sea-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-clean-view.jpg
-- name: stories-solidies-planning-attack-blue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-solidies-planning-attack-blue-matrix.jpg
-- name: crow_colorful_blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_blocks.jpg
-- name: downtown-trucksilo-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
-- name: white-house-lawn-white-house-window-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-far-away.jpg
-- name: crow-crow-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crunch-paper.jpg
-- name: rain-princess-IMG_6945.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
-- name: border-fence-border-fence-on-hill-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-aqua.jpg
-- name: server-cloud-server-racks-clouds-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-sand-paper.jpg
-- name: amusement-park-amusement-park-2-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sunday.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
-- name: aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-crypto-machine-bletchley-copper-circuit.png
-- name: castle-wall-DSC-0067-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-free-woman.JPG
-- name: legal-statue-legalstatue-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
-- name: dragon-desert-desert-dragon-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-oily-mcoilface.jpg
-- name: meadowbutterfly-meadow-butterfly-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-dali.jpg
-- name: nazi-invasion-yellow-roses-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-yellow-roses-garden.jpg
-- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-- name: birdhouse-birdhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
+- name: fence-mexico-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-brush.jpg
+- name: stories-ellis-island-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
+- name: la-muse-eagle-spread-tree-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eagle-spread-tree-2.jpg
+- name: oldbarn-oldbarn-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-far-away.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-green-zuma.jpg
+- name: oldsmallboat-oldsmallboat-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-oily-mcoilface.jpg
+- name: store-on-corner-store-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
+- name: oldcabin-store-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
+- name: supreme-court-supremecourt-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-plentiful.jpg
+- name: stalin-time-satellite-with-sunset.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-satellite-with-sunset.jpg
+- name: oldsmallboat-oldsmallboat.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat.jpg
+- name: blossombar-blue-granite-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-00-00.jpg
+- name: beach-rocks-beach-rocks-currents-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-clean-view.jpg
+- name: meadowbutterfly-meadow-butterfly-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-post-modern.jpg
+- name: aws-s3-stories-berlin-wall-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-berlin-wall-graham-sutherland.jpg
+- name: store-on-corner-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-circuit.jpg
+- name: ellis-island-ellis-island-room-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-pablo-blue.jpg
+- name: nazi-invasion-old-church-in-field.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-church-in-field.jpg
+- name: oldhouse-granaryfield-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-yellow-paper.jpg
+- name: birdhouse-birdhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-diego-rivera1.jpg
+- name: oldhouse-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
+- name: legal-statue-legalstatue-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-missle.jpg
+- name: server-cloud-server-racks-clouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-umberto-bocc.jpg
+- name: beach-clouds-lifeguard-beachclouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-far-away.jpg
+- name: abandonedbuildings_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purple_pond.jpg
+- name: store-on-corner-store-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-hot-spicy.jpg
 - name: windowmountain-window-mountain-gred-mash.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gred-mash.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
+- name: oldsmallboat-oldsmallboat-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-constitution.jpg
+- name: stalin-time-gypsy-house-with-pen.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-gypsy-house-with-pen.jpg
+- name: castle-wall-DSC-0067-blue-circuit-3.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-3.JPG
+- name: abe-lincoln-one-plentiful-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-15-87.jpg
+- name: flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-marcel-duchamp.jpg
+- name: nazi-invasion-old-piano-playing-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-piano-playing-hospital.jpg
+- name: abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-07-91.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-horiz-circuit.jpg
+- name: bordercrossing-bordercrossing-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gan-vogh.jpg
+- name: lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colored-circuits.jpg
+- name: downtown-los-angeles-downtown-la-colorful-blocks.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colorful-blocks.JPG
+- name: store-on-corner-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
+- name: wind-mills-windmills-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dry-skin.jpg
 - name: downtheline-downtheline-crunch-paper.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crunch-paper.jpg
-- name: aws-s3-stories-new-69-120-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-69-120-800-500-0-max-0--5--1.jpg
-- name: nazi-invasion-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-building-trees-sky.jpg
-- name: beach-rocks-beach-rocks-currents-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-three.jpg
-- name: server-cloud-server-racks-door-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-dream.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-mucha-mult.jpg
-- name: oldhousecars-house-old-cars-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-oily-mcoilface.jpg
-- name: lincoln-memorial-lincolnmemorial-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-deep-connections.jpg
-- name: oldhouse-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-emily-carr.jpg
-- name: oldroad-old-road-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-pablo-blue.jpg
-- name: window-window-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purp-paper.jpg
-- name: stories-new-old-door-lock-2-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-2-marcel-duchamp.jpg
-- name: oldsmallboat-oldsmallboat-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-umberto-bocc.jpg
-- name: crow_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
-- name: berlinwall-DSC-0084-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-bright-sand.jpg
-- name: mistywoods-babyfoot-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sand-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-gred-mash.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
-- name: stalin-time-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty_35910144944_o.jpg
-- name: old-door-lock-old-door-lock-2-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-diego-rivera1.jpg
-- name: nyc-flag-nycflag-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-internet-numbers.jpg
+- name: old-door-lock-old-door-lock-2-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-collage.jpg
+- name: death-valley-death-valley-national-park-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-dali.jpg
+- name: old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
+- name: old-cabin-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-monet-one.jpg
+- name: stalin-time-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-crypto-wheels-old-compute-bletchley.jpg
+- name: braceros-domingo-ulloa-docks-big-cosco-ship.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-docks-big-cosco-ship.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
+- name: eduardo-eduardo-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-graham-sutherland.jpg
+- name: adam-smith-adam-smith-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dali-two.jpg
+- name: docks-docks-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-circuit.jpg
 ---
 Local Musicians Host Atlantic Beach Concerts.&nbsp;Baltimore County Police Emphasize Holiday Crime Prevention.&nbsp;HPEs Commitment To Protecting Human Rights.&nbsp;Georgia Restores Thousands Of Purged Voters.&nbsp;Impeachment Impasse Pelosi Requests Details Of Senate Trial Before Sending Articles.&nbsp;Home For The Holidays.&nbsp;Sliding Ice, Snow From Roof A 'safety Concern'.&nbsp;Georgia Restores Thousands Of Purged Voters.&nbsp;
